2nd episode of Namaste React | Parcel | browserlist

--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
 
     <!-- Only the root element was controlled by React, not any other things in the DOM. -->
 
+<!-- Once the npm react and react-dom was installed , we no longer needs the cdn. -->
 
-    <!-- React -->
-<script src="https://cdn.jsdelivr.net/npm/react@latest/umd/react.production.min.js" crossorigin></script>
-
-<!-- ReactDOM -->
-<script src="https://cdn.jsdelivr.net/npm/react-dom@latest/umd/react-dom.production.min.js" crossorigin></script>
-
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
     
 </body>
 </html>
