Incomplete commit as 3rd episode is yet to complete by 15 minutes, due to emergency pushing to git

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- The content already present in the root will be replaced by root.render() -->
      <!-- When react is loaded this root element is took control over by React, and note that it is not appended but it is replaced. -->
     <div id="root">
-        <h1>I was here</h1>
+        <h1>Not rendered</h1>
     </div>
 
     <h3>I am at end</h3>
