--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h2>I was already here before</h2>
+    <!-- <h2>I was already here before</h2> -->
 
     <!-- The content already present in the root will be replaced by root.render() -->
      <!-- When react is loaded this root element is took control over by React, and note that it is not appended but it is replaced. -->
@@ -16,7 +16,7 @@
         <h1>Not rendered</h1>
     </div>
 
-    <h3>I am at end</h3>
+    <!-- <h3>I am at end</h3> -->
 
 
     <!-- Only the root element was controlled by React, not any other things in the DOM. -->
